<resources>
    <string name="app_name">Linphone</string>

    <string name="mute">MUTE</string>
    <string name="home">HOME</string>
    <string name="str_return">RETURN</string>

    <string name="remote">Remote</string>
    <string name="power">POWER</string>
    <string name="cha">CHA</string>
    <string name="vol">VOL</string>

    <string name="tv_remote">TV Remote</string>

    <string name="order_status">Order status</string>
    <string name="order_details">Order details</string>
    <string name="food_order">Food Order</string>

    <string name="requested">Requested</string>
    <string name="in_progress">In Progress</string>
    <string name="delivered">Delivered</string>

    <string name="dessert">Dessert</string>
    <string name="international">International</string>
    <string name="italian">Italian</string>
    <string name="kids_menu">Kids Menu</string>
    <string name="middle_eas">Middle Eas</string>

    <string name="appetizer">Appetizer</string>

    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="read">Read</string>

    <string name="curtains">Curtains</string>
    <string name="master_light">Master Ligth</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>

    <string name="on">ON</string>
    <string name="off">OFF</string>

    <string name="bathroom_light">Bathroom Light</string>

    <string name="lights">Lights</string>

    <string name="min">MIN</string>
    <string name="max">MAX</string>

    <string name="temperature">Temperature</string>

    <string name="fan_speed">Fan Speed</string>

    <string name="bedding_pillows">Bedding &amp; Pillows</string>
    <string name="in_room">In Room</string>
    <string name="laundries">Laundries</string>
    <string name="towels">Towels</string>
    <string name="bath">Bath</string>
    <string name="drinks">Drinks</string>

    <string name="please_input_account">Please enter account</string>
    <string name="please_input_pwd">Please enter password</string>
    <string name="please_input_domain">Please enter domain</string>
    <string name="please_input_proxy_server">Please enter proxy server</string>
    <string name="config">Configure</string>

    <!-- amenities checkout -->
    <string name="recommendations_for_you">Recommendations for you</string>
    <string name="Extra_Towel">Extra Towel</string>
    <string name="Dental_Kit">Dental Kit</string>
    <string name="Bill_Details">Bill Details</string>
    <string name="Remark">Remark</string>
    <string name="Type_your_comment">Type your comment</string>
    <string name="Payment_Option">Payment Option</string>
    <string name="Cash">Cash</string>

    <!-- call number -->
    <string name="VOICE_MAIL">VOICE MAIL</string>
    <string name="SERVICE_CALL">SERVICE CALL</string>
    <string name="SOS">SOS</string>

    <!-- room control -->
    <string name="room_control_set_your_preferred_temperature">Set your preferred \ntemperature by moving the \nred dot.\nLower temperature can \nhelp you sleep well. \nRemember.</string>
    <string name="room_control_set_your_preferred_fan">Set your preferred fan \nspeed by moving the red \ndot.</string>

    <!-- food checkout -->
    <string name="Sweet_Potatoes">Sweet Potatoes</string>
    <string name="Coca_Cola">Coca-Cola</string>

    <!-- home -->
    <string name="ROOM_CONTROL">ROOM CONTROL</string>
    <string name="TV_REMOTE">TV REMOTE</string>
    <string name="Hello_Adam_Miller">Hello, Adam Miller!</string>
    <string name="You_have_2Message">You have 2Message</string>
    <string name="New_York">New York</string>

    <string name="DO_NOT_DISTURB">DO NOT DISTURB</string>
    <string name="MAKE_UP_ROOM">MAKE UP ROOM</string>
    <string name="SERVICE_MENU">SERVICE MENU</string>
    <string name="Our_Promotions">Our Promotions</string>
    <string name="Tap_QR_code">Tap QR code to view full screen</string>
    <string name="PHONE">PHONE</string>

    <!-- food meal -->
    <string name="Pasta_Alla_Filicudara">Pasta Alla Filicudara</string>
    <string name="Fresh_pasta">Fresh pasta with tuna chunks, cherry tomatoes, onion  capers</string>
    <string name="Allergens">Allergens</string>
    <string name="For_Gluten">For Gluten/Wheat, Egg, Peanut/Tree Nut, Soy</string>

    <!-- Msg -->
    <string name="Message_2">Message(2)</string>

    <!-- msg details -->
    <string name="MyGallery">MyGallery</string>
    <string name="To_Admm_Miller">To:Admm Miller</string>
    <string name="Your_card_will_be_charged">Your card will be charged the amount of the meal.</string>
    <string name="Happy_Hours_2x1">Happy Hours 2x1</string>
    <string name="Pasta_Pomodoro">2x Pasta Pomodoro</string>

    <!-- phone -->
    <string name="Rober_Watson">Rober Watson</string>
    <string name="Housekeeping">Housekeeping</string>
    <string name="MUTE">MUTE</string>
    <string name="HOLD">HOLD</string>
    <string name="SPEAKER">SPEAKER</string>
    <string name="TABLET">TABLET</string>

    <!-- tv remote -->
    <string name="Channel">Channel</string>

    <!-- common bill -->
    <string name="Sub_Total">Sub Total</string>
    <string name="VAT_Total">VAT Total(7%)</string>
    <string name="Service_fee">Service fee(10%)</string>
    <string name="Tips">Tips</string>
    <string name="Total">Total</string>

    <!-- common bottom -->
    <string name="Remote">Remote</string>

    <!-- common bottom confirm -->
    <string name="CONFIRM">CONFIRM</string>

    <string name="Food_Order">Food Order</string>

    <string name="Items_3">3 Items</string>
    <string name="Items_0">0 Items</string>
    <string name="Items">Items</string>

    <string name="Available_until">Available until 3:00</string>
    <string name="Order_dinner_by">Order dinner by 3:00 and enjoy an extra meal for your loved ones!</string>

    <string name="Service">Service</string>
    <string name="order_been_accepted">Your order has bean accepted.</string>

    <string name="offer_brief_description">offer brief description</string>
    <string name="offer_description">offer description with formatting</string>
    <string name="second_offer">second offer</string>

    <string name="Scan_to_check_on_mobile">Scan to check on mobile</string>

    <string name="without_config">Without configure account</string>

    <string name="please_input_need">Please enter required items </string>

    <string name="config_success">Configure success</string>
    <string name="please_config_info">please enter account</string>

    <string name="no_permission_camera">Camera permission denied, unable to use app temporarily</string>
    <string name="no_permission_audio">Audio permission denied, unable to use app temporarily</string>
    <string name="no_permission_phone">Phone permission denied, unable to use app temporarily</string>

    <string name="Promotions">Promotions</string>

    <string name="Room_Control">Room Control</string>

    <string name="Checkout">Checkout</string>

    <string name="Amenties">Amenties</string>

    <string name="Appetzer">Appetzer</string>
    <string name="Bruschetta_Pomodoro_e_Aglio">Bruschetta Pomodoro e Aglio</string>
    <string name="Sapori_di_Sicilia">Sapori di Sicilia</string>
    <string name="Pizza_Margherita">Pizza Margherita</string>
    <string name="Main_dish">Main dish</string>
    <string name="Pizza_Peperoncino">Pizza Peperoncino</string>

    <string name="Pizza_Marghcrita">Pizza Marghcrita</string>
    <string name="Arancini">Arancini (3 picces)</string>

    <string name="Amenities">Amenities</string>
    <string name="Concierge">Concierge</string>
    <string name="Maintenance">Maintenance</string>
    <string name="Food">Food</string>
    <string name="New">New</string>
    <string name="Wakeup_Call">Wakeup Call</string>
    <string name="Late_Checkout">Late Checkout</string>
    <string name="DND">DND</string>
    <string name="Clean_Room">Clean Room</string>
    <string name="Service_Menu">Service Menu</string>

    <string name="Jacket">Jacket</string>
    <string name="Pizza_Margherta">Pizza Margherta</string>
    <string name="Overcoat">Overcoat</string>
    <string name="Laundry">Laundry</string>
    <string name="Pyjamas_Silk">Pyjamas (Silk)</string>
    <string name="Necktie">Necktie</string>
    <string name="Dry_Cleaning">Dry Cleaning</string>
    <string name="Dressing_Gown_Silk">Dressing Gown (Silk)</string>

    <string name="language_english">English</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_chinese_tw">繁体中文</string>
    <string name="language_jpan">日本语</string>
    <string name="language_th">ไทย</string>
    <string name="language_vietna">Vietna</string>

    <string name="ADD_TO_CART">ADD TO CART</string>

    <string name="money_unit">$</string>

    <string name="please_select_food">please choose the food</string>
    <string name="please_select_amen">please choose the amenities</string>
    <string name="Hong_kong">HongKong</string>

    <string name="str_location_test">@string/Hong_kong</string>









</resources>
