<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_round_bg_white"
    tools:context=".ui.amen.AmentiesAc">

    <include
        layout="@layout/common_title_gray_line" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/bg_redius"
        android:paddingBottom="@dimen/bg_redius"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pillow"
                style="@style/style_scroll_nav"
                android:text="@string/bedding_pillows"/>

            <TextView
                android:id="@+id/in_room"
                style="@style/style_scroll_nav"
                android:text="@string/in_room"/>

            <TextView
                android:id="@+id/laundries"
                style="@style/style_scroll_nav"
                android:text="@string/laundries"/>

            <TextView
                android:id="@+id/towels"
                style="@style/style_scroll_nav"
                android:text="@string/towels"/>

            <TextView
                android:id="@+id/bath"
                style="@style/style_scroll_nav"
                android:text="@string/bath"/>

            <TextView
                android:id="@+id/drinks"
                style="@style/style_scroll_nav"
                android:text="@string/drinks"/>
        </LinearLayout>
    </HorizontalScrollView>

    <View
        style="@style/style_splite_line_h_light_gray"
        android:background="@color/color_split_line_light_gray_half"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" />



</LinearLayout>