<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context=".AccountAc">

    <EditText
        android:id="@+id/ed_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_account"/>

    <EditText
        android:id="@+id/ed_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/please_input_pwd" />

    <EditText
        android:id="@+id/ed_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_domain" />

    <EditText
        android:id="@+id/ed_proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_proxy_server" />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbt_udp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UDP"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbt_tcp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TCP" />

        <RadioButton
            android:id="@+id/rbt_tls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TLS" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_connect"
        android:text="@string/config" />
</LinearLayout>