<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        style="@style/style_amen_checkout_bill_details_layout">
        <TextView
            style="@style/style_amen_checkout_bill_details_layout_title"
            android:text="@string/Sub_Total" />

        <TextView
            style="@style/style_amen_checkout_bill_details_layout_value"
            android:text="$39.95"/>
    </LinearLayout>
    <LinearLayout
        style="@style/style_amen_checkout_bill_details_layout">
        <TextView
            style="@style/style_amen_checkout_bill_details_layout_title"
            android:text="@string/VAT_Total" />

        <TextView
            style="@style/style_amen_checkout_bill_details_layout_value"
            android:text="$16.45"/>
    </LinearLayout>
    <LinearLayout
        style="@style/style_amen_checkout_bill_details_layout">
        <TextView
            style="@style/style_amen_checkout_bill_details_layout_title"
            android:text="@string/Service_fee" />

        <TextView
            style="@style/style_amen_checkout_bill_details_layout_value"
            android:text="$23.50"/>
    </LinearLayout>
    <LinearLayout
        style="@style/style_amen_checkout_bill_details_layout">
        <TextView
            style="@style/style_amen_checkout_bill_details_layout_title"
            android:text="@string/Tips" />

        <TextView
            style="@style/style_amen_checkout_bill_details_layout_value"
            android:text="$0"/>
    </LinearLayout>

    <LinearLayout
        style="@style/style_amen_checkout_bill_details_layout">
        <TextView
            style="@style/style_amen_checkout_bill_details_layout_title"
            android:text="@string/Total"
            android:textSize="@dimen/x25"
            android:textColor="@color/color_main_text_color"/>

        <TextView
            style="@style/style_amen_checkout_bill_details_layout_value"
            android:text="$235.00"
            android:textSize="@dimen/x25"
            android:textColor="@color/color_main_text_color" />
    </LinearLayout>

</LinearLayout>