<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/bg_redius"
        android:background="@drawable/shape_top_round_bg_tv_remote_dialog">

        <include layout="@layout/common_bottom" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/bg_redius"
            android:paddingRight="@dimen/bg_redius"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbt_req"
                android:text="@string/requested"
                android:checked="true"
                android:drawableBottom="@mipmap/icon_point_white"
                style="@style/style_service_menu_details_dialog_rbt" />

            <RadioButton
                android:id="@+id/rbt_in_progress"
                android:text="@string/in_progress"

                style="@style/style_service_menu_details_dialog_rbt" />

            <RadioButton
                android:id="@+id/rbt_delivered"
                android:text="@string/delivered"
                style="@style/style_service_menu_details_dialog_rbt" />
        </RadioGroup>

        <View
            style="@style/style_splite_line_h_light_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>